--- a/app/src/main/res/layout/trip_show_activity.xml
+++ b/app/src/main/res/layout/trip_show_activity.xml
@@ -11,275 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <androidx.slidingpanelayout.widget.SlidingPaneLayout
-        android:id="@+id/sliding_location_detail"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:paddingTop="20dp"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:layout_gravity="bottom">
-
-        <LinearLayout
-            android:layout_width="360dp"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:orientation="horizontal"
-            android:textAlignment="textStart">
-    
-            <LinearLayout
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:orientation="vertical"
-                android:textAlignment="textStart">
-    
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-    
-                    <TextView
-                        android:id="@+id/general_information"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:paddingBottom="0dp"
-                        android:text="Title"
-                        android:textColor="@color/darkgrey"
-                        android:textSize="10sp"
-                        android:fontFamily="@font/nunito_bold" />
-                </LinearLayout>
-    
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="15dp"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:orientation="horizontal">
-    
-                    <TextView
-                        android:id="@+id/title_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/raleway_bold"
-                        android:gravity="center|start"
-                        android:text="Title"
-                        android:textColor="@color/darkgreen"
-                        android:textStyle="bold" />
-    
-                </LinearLayout>
-    
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:orientation="horizontal">
-    
-                    <TextView
-                        android:id="@+id/distance_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:paddingBottom="0dp"
-                        android:text="Distance"
-                        android:textColor="@color/darkgrey"
-                        android:textSize="10sp"
-                        android:fontFamily="@font/nunito_bold" />
-                </LinearLayout>
-    
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="15dp"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:orientation="horizontal">
-    
-                    <TextView
-                        android:id="@+id/distance_info"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/raleway_bold"
-                        android:gravity="center|start"
-                        android:text="0.0 km"
-                        android:textColor="@color/darkgreen"
-                        android:textStyle="bold" />
-                </LinearLayout>
-    
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:orientation="horizontal">
-    
-                    <TextView
-                        android:id="@+id/description_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:paddingBottom="0dp"
-                        android:text="Description"
-                        android:textColor="@color/darkgrey"
-                        android:textSize="10sp"
-                        android:fontFamily="@font/nunito_bold"  />
-                </LinearLayout>
-    
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:orientation="horizontal">
-    
-                    <TextView
-                        android:id="@+id/description_info"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/raleway_bold"
-                        android:gravity="center|start"
-                        android:text="Description"
-                        android:textColor="@color/darkgreen"
-                        android:textSize="12sp"/>
-                </LinearLayout>
-    
-    
-            </LinearLayout>
-    
-            <LinearLayout
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="1"
-                android:gravity="start"
-                android:orientation="vertical">
-    
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:orientation="horizontal">
-    
-                    <TextView
-                        android:id="@+id/date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:paddingBottom="0dp"
-                        android:text="Date"
-                        android:textColor="@color/darkgrey"
-                        android:textSize="10sp"
-                        android:fontFamily="@font/nunito_bold" />
-                </LinearLayout>
-    
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="15dp"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:orientation="horizontal">
-    
-                    <TextView
-                        android:id="@+id/date_info"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/raleway_bold"
-                        android:gravity="center|start"
-                        android:text="12 Oct 2021"
-                        android:textColor="@color/darkgreen"
-                        android:textStyle="bold" />
-                </LinearLayout>
-    
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:orientation="horizontal">
-    
-                    <TextView
-                        android:id="@+id/weather"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/nunito_bold"
-                        android:gravity="start"
-                        android:paddingBottom="0dp"
-                        android:text="Weather"
-                        android:textColor="@color/darkgrey"
-                        android:textSize="10sp" />
-                </LinearLayout>
-    
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="15dp"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:orientation="horizontal">
-    
-                    <TextView
-                        android:id="@+id/weather_info"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/raleway_bold"
-                        android:gravity="center|start"
-                        android:text="weather"
-                        android:textColor="@color/darkgreen"
-                        android:textStyle="bold" />
-                </LinearLayout>
-    
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:orientation="horizontal">
-    
-                    <TextView
-                        android:id="@+id/location"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:paddingBottom="0dp"
-                        android:text="Locations"
-                        android:textColor="@color/darkgrey"
-                        android:textSize="10sp"
-                        android:fontFamily="@font/nunito_bold" />
-                </LinearLayout>
-    
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:orientation="horizontal">
-    
-                    <TextView
-                        android:id="@+id/numOfLocations_info"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/raleway_bold"
-                        android:gravity="center|start"
-                        android:text="3"
-                        android:textColor="@color/darkgreen"
-                        android:textStyle="bold" />
-                </LinearLayout>
-    
-            </LinearLayout>
-    
-        </LinearLayout>
-    
-    </androidx.slidingpanelayout.widget.SlidingPaneLayout>
+    <include
+        android:id="@+id/bottom_trip_detail"
+        layout="@layout/bottom_trip_detail_layout"
+        />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
