--- a/app/src/main/res/layout/bottom_trip_detail_layout.xml
+++ b/app/src/main/res/layout/bottom_trip_detail_layout.xml
@@ -128,19 +128,18 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:layout_weight="1"
                 android:gravity="start"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/description_info"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/raleway_bold"
                     android:gravity="center|start"
-                    android:text="wttuyetwywruiythitoijwroijoihroigjeiohjhjhioshisohiotjshiijshti"
+                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                     android:textColor="@color/darkgreen"
                     android:textSize="12sp"/>
             </LinearLayout>
@@ -149,7 +148,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="180dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_weight="1"
