--- a/app/src/main/res/layout/bottom_trip_detail_layout.xml
+++ b/app/src/main/res/layout/bottom_trip_detail_layout.xml
@@ -8,15 +8,22 @@
     android:background="@drawable/rounded_corner_bottom_trip_detail"
     android:elevation="50dp"
     app:behavior_draggable="true"
-    app:behavior_peekHeight="160dp"
+    app:behavior_peekHeight="170dp"
     app:layout_behavior="@string/bottom_sheet_behavior">
+
+    <View
+        android:layout_width="60dp"
+        android:layout_height="4dp"
+        android:layout_gravity="center|top"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/rounded_corners_darkgrey_background"/>
 
     <LinearLayout
         android:layout_width="360dp"
         android:layout_height="match_parent"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:layout_marginTop="20dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_marginTop="25dp"
         android:layout_marginLeft="25dp"
         android:gravity="center|top"
         android:orientation="horizontal"
@@ -25,7 +32,7 @@
         <LinearLayout
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="30dp"
             android:gravity="start"
             android:orientation="vertical"
             android:textAlignment="textStart">
@@ -45,7 +52,7 @@
                     android:paddingBottom="0dp"
                     android:text="Title"
                     android:textColor="@color/darkgrey"
-                    android:textSize="10sp"
+                    android:textSize="12sp"
                     android:fontFamily="@font/nunito_bold" />
             </LinearLayout>
 
@@ -65,6 +72,7 @@
                     android:gravity="center|start"
                     android:text="Titleg"
                     android:textColor="@color/darkgreen"
+                    android:textSize="15sp"
                     android:textStyle="bold"  />
 
             </LinearLayout>
@@ -84,7 +92,7 @@
                     android:paddingBottom="0dp"
                     android:text="Distance"
                     android:textColor="@color/darkgrey"
-                    android:textSize="10sp"
+                    android:textSize="12sp"
                     android:fontFamily="@font/nunito_bold" />
             </LinearLayout>
 
@@ -104,6 +112,7 @@
                     android:gravity="center|start"
                     android:text="0.0 km"
                     android:textColor="@color/darkgreen"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -122,7 +131,7 @@
                     android:paddingBottom="0dp"
                     android:text="Description"
                     android:textColor="@color/darkgrey"
-                    android:textSize="10sp"
+                    android:textSize="12sp"
                     android:fontFamily="@font/nunito_bold"  />
             </LinearLayout>
 
@@ -141,7 +150,7 @@
                     android:gravity="center|start"
                     android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                     android:textColor="@color/darkgreen"
-                    android:textSize="12sp"/>
+                    android:textSize="14sp"/>
             </LinearLayout>
 
 
@@ -150,7 +159,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="15dp"
             android:layout_weight="1"
             android:gravity="start"
             android:orientation="vertical">
@@ -170,7 +179,7 @@
                     android:paddingBottom="0dp"
                     android:text="Date"
                     android:textColor="@color/darkgrey"
-                    android:textSize="10sp"
+                    android:textSize="12sp"
                     android:fontFamily="@font/nunito_bold" />
             </LinearLayout>
 
@@ -190,6 +199,7 @@
                     android:gravity="center|start"
                     android:text="12 Oct 2021"
                     android:textColor="@color/darkgreen"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -209,7 +219,7 @@
                     android:paddingBottom="0dp"
                     android:text="Weather"
                     android:textColor="@color/darkgrey"
-                    android:textSize="10sp" />
+                    android:textSize="12sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -228,6 +238,7 @@
                     android:gravity="center|start"
                     android:text="weather"
                     android:textColor="@color/darkgreen"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -246,7 +257,7 @@
                     android:paddingBottom="0dp"
                     android:text="Locations"
                     android:textColor="@color/darkgrey"
-                    android:textSize="10sp"
+                    android:textSize="12sp"
                     android:fontFamily="@font/nunito_bold" />
             </LinearLayout>
 
@@ -266,6 +277,7 @@
                     android:gravity="center|start"
                     android:text="3"
                     android:textColor="@color/darkgreen"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
