--- a/app/src/main/res/layout/photo_show.xml
+++ b/app/src/main/res/layout/photo_show.xml
@@ -4,23 +4,42 @@
     android:layout_height="match_parent"
     >
 
-    <com.google.android.material.appbar.AppBarLayout
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:background="@color/lightgreen"
+        android:fontFamily="@font/nunito_bold"
+        android:gravity="center"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        android:text="@string/heading_photo"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            />
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="5dp"
+        android:background="@color/darkgreen"
+        android:translationY="60dp"/>
 
-    </com.google.android.material.appbar.AppBarLayout>
+    <View
+        android:id="@+id/photo_shadow"
+        android:layout_width="wrap_content"
+        android:layout_height="3dp"
+        android:background="@drawable/shadow"
+        android:translationY="65dp" />
 
-    <ImageView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/image"/>
+        android:layout_marginTop="68dp"
+        android:paddingBottom="10dp">
+        <include
+            layout="@layout/photo_detail"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent" />
+    </ScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
