--- a/app/src/main/res/layout/trip_activity_text_detail.xml
+++ b/app/src/main/res/layout/trip_activity_text_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottom_trip_detail_layout"
@@ -11,74 +11,90 @@
     app:behavior_peekHeight="170dp"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
-    <View
-        android:layout_width="40dp"
-        android:layout_height="4dp"
-        android:layout_gravity="center|top"
+    <LinearLayout
+        android:id="@+id/pull_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:background="@drawable/rounded_corners_lightgrey_background"/>
+        android:gravity="center_horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="parent">
+        <View
+            android:layout_width="40dp"
+            android:layout_height="4dp"
+            android:background="@drawable/rounded_corners_lightgrey_background" />
+    </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/trip_text_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/pull_tab"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="18dp">
+            android:layout_marginBottom="18dp"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/general_information"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_bold"
                     android:layout_marginBottom="3dp"
+                    android:fontFamily="@font/nunito_bold"
                     android:text="Title"
                     android:textColor="@color/darkgrey"
                     android:textSize="14sp" />
+
                 <TextView
                     android:id="@+id/title_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/raleway_bold"
-                    android:textStyle="bold"
                     android:text="Me at the zoo"
                     android:textColor="@color/darkgreen"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                android:layout_marginLeft="40dp">
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_bold"
                     android:layout_marginBottom="3dp"
+                    android:fontFamily="@font/nunito_bold"
                     android:text="Date"
                     android:textColor="@color/darkgrey"
                     android:textSize="14sp" />
+
                 <TextView
                     android:id="@+id/date_info"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/raleway_bold"
-                    android:textStyle="bold"
                     android:text="12 Oct 2021"
                     android:textColor="@color/darkgreen"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
         </LinearLayout>
@@ -86,58 +102,62 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="18dp">
+            android:layout_marginBottom="18dp"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/distance_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_bold"
                     android:layout_marginBottom="3dp"
+                    android:fontFamily="@font/nunito_bold"
                     android:text="Distance"
                     android:textColor="@color/darkgrey"
                     android:textSize="14sp" />
+
                 <TextView
                     android:id="@+id/distance_info"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/raleway_bold"
-                    android:textStyle="bold"
                     android:text="3.0 km"
                     android:textColor="@color/darkgreen"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                android:layout_marginLeft="40dp">
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/weather"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_bold"
                     android:layout_marginBottom="3dp"
+                    android:fontFamily="@font/nunito_bold"
                     android:text="Weather"
                     android:textColor="@color/darkgrey"
                     android:textSize="14sp" />
+
                 <TextView
                     android:id="@+id/weather_info"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/raleway_bold"
-                    android:textStyle="bold"
                     android:text="17°C"
                     android:textColor="@color/darkgreen"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
         </LinearLayout>
@@ -145,23 +165,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="18dp">
+            android:layout_marginBottom="18dp"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/description_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_bold"
                     android:layout_marginBottom="3dp"
+                    android:fontFamily="@font/nunito_bold"
                     android:text="Description"
                     android:textColor="@color/darkgrey"
                     android:textSize="14sp" />
+
                 <TextView
                     android:id="@+id/description_info"
                     android:layout_width="wrap_content"
@@ -169,35 +191,63 @@
                     android:fontFamily="@font/raleway_bold"
                     android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                     android:textColor="@color/darkgreen"
-                    android:textSize="15sp"/>
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                android:layout_marginLeft="40dp">
+                android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_bold"
                     android:layout_marginBottom="3dp"
+                    android:fontFamily="@font/nunito_bold"
                     android:text="Locations"
                     android:textColor="@color/darkgrey"
                     android:textSize="15sp" />
+
                 <TextView
                     android:id="@+id/numOfLocations_info"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/raleway_bold"
-                    android:textStyle="bold"
                     android:text="3"
                     android:textColor="@color/darkgreen"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/trip_text_detail"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nunito_bold"
+            android:layout_marginBottom="10dp"
+            android:text="Locations:"
+            android:textColor="@color/darkgrey"
+            android:textSize="20sp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/trip_images"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp" />
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
